--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Yoldi",
-  "version": "1.0.0",
+  "name": "potfolio-server-nextjs-v2",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
@@ -12,15 +12,18 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.2.0",
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
     "next": "14.1",
     "next-auth": "^5.0.0-beta.17",
-    "pg": "^8.11.5",
+    "pg": "8.10.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "universal-cookie": "^7.1.0",
     "uuid": "^9.0.1",
