--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "potfolio-server-nextjs-v2",
-  "version": "2.0.0",
+  "name": "potfolio-server-nextjs-v0.0.3",
+  "version": "0.0.3",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
@@ -10,40 +10,40 @@
     "populate": "node --trace-warnings lib/backend/populate/run.js"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^2.2.0",
+    "cloudinary": "^2.4.0",
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
-    "next": "14.1",
-    "next-auth": "^5.0.0-beta.17",
-    "pg": "8.10.0",
+    "next": "14.2.5",
+    "next-auth": "^5.0.0-beta.20",
+    "pg": "^8.10.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1",
-    "react-redux": "^9.1.0",
+    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
-    "universal-cookie": "^7.1.0",
-    "uuid": "^9.0.1",
-    "zod": "^3.22.4"
+    "universal-cookie": "^7.2.0",
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^14.2.1",
-    "@types/node": "^20.12.5",
-    "@types/pg": "^8.11.4",
+    "@next/eslint-plugin-next": "^14.2.5",
+    "@types/node": "^20",
+    "@types/pg": "^8.11.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.5",
     "eslint": "^8",
-    "eslint-config-next": "14.1.3",
-    "eslint-plugin-react": "^7.34.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-config-next": "14.2.5",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "postcss": "^8",
     "tailwind-styled-components": "^2.2.0",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
