--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "lib/backend/db/connect.js", "lib/backend/populate/run.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "lib/backend/db/connect.js"],
   "exclude": ["node_modules"]
 }
