--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
+    "nextjs-current-url": "^1.0.3",
     "pg": "^8.10.0",
     "react": "^18",
     "react-dom": "^18",
