--- a/package.json
+++ b/package.json
@@ -10,23 +10,17 @@
     "populate": "node --trace-warnings lib/backend/populate/run.js"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.4.0",
-    "clsx": "^2.1.1",
-    "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
-    "nextjs-current-url": "^1.0.3",
     "pg": "^8.10.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
-    "redux": "^5.0.1",
-    "universal-cookie": "^7.2.0",
+    "tailwind-merge": "^2.5.2",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
@@ -43,7 +37,6 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "postcss": "^8",
-    "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
