--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start -p 3000",
     "lint": "next lint",
-    "populate": "node --trace-warnings src/lib/db/populate.js"
+    "populate": "npx tsx src/lib/db/populate.ts"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
