--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.4.0",
+    "clsx": "^2.1.1",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
     "pg": "^8.10.0",
@@ -19,6 +20,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-toastify": "^10.0.5",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.2",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
