--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # my files
 package-lock.json
 \[unused\]/
+/.assets/
 .env
 
 # dependencies
@@ -30,12 +31,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
-
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
