--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "build": "next build",
     "start": "next start -p 3000",
     "lint": "next lint",
-    "populate": "npx tsx src/lib/db/populate.ts"
+    "populate": "npx tsx src/lib/db/reset-users.ts"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.9.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.4.0",
     "clsx": "^2.1.1",
