--- a/.env.empty
+++ b/.env.empty
@@ -1,12 +1,8 @@
-# node jsonwebtoken
-JWT_EXP_SECONDS=""
-JWT_SECRET=""
+# mode: "local" or "vercel"
+RUNNING_MODE=""
 
-# node pg
-PG_HOST=""
-PG_USER=""
-PG_PASSWORD=""
-PG_DATABASE=""
+# next.js public variables (accessible on client)
+NEXT_PUBLIC_DOMAIN=""
 
 # auth.js
 AUTH_URL=""
@@ -22,3 +18,11 @@ GOOGLE_CLIENT_SECRET=""
 CLOUDINARY_CLOUD_NAME=""
 CLOUDINARY_API_KEY=""
 CLOUDINARY_API_SECRET=""
+
+# node pg
+PG_HOST=""
+PG_USER=""
+PG_PASSWORD=""
+PG_DATABASE=""
+
+# vercel pg
