--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "populate": "npx tsx src/lib/db/reset-users.ts"
+    "populate": "npx tsx src/lib/db/reset-tables/users.ts"
   },
   "dependencies": {
     "@vercel/postgres": "^0.9.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.4.0",
-    "clsx": "^2.1.1",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
     "pg": "^8.10.0",
