--- a/.empty.env
+++ b/.empty.env
@@ -22,7 +22,7 @@ GITHUB_CLIENT_SECRET_PRODUCTION=""
 # secret data: cloudinary
 CLOUDINARY_CLOUD_NAME=""
 CLOUDINARY_API_KEY=""
-CLOUDINARY_API_SECRET="U"
+CLOUDINARY_API_SECRET=""
 
 # secret data: postgres (development mode)
 PG_DEV_HOST=""
