--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "potfolio-server-nextjs-v3",
-  "version": "3.0.0",
+  "name": "site-nextjs-yoldi",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "populate": "npx tsx src/lib/db/reset-tables/users.ts"
+    "lint": "next lint"
   },
   "dependencies": {
     "@vercel/postgres": "^0.9.0",
@@ -32,7 +31,6 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
-    "dotenv": "^16.4.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "eslint-plugin-react": "^7.35.0",
