--- a/.empty.env
+++ b/.empty.env
@@ -25,7 +25,7 @@ CLOUDINARY_API_KEY=""
 CLOUDINARY_API_SECRET=""
 
 # secret data: postgres (development mode)
-PG_DEV_HOST=""
-PG_DEV_USER=""
-PG_DEV_PASSWORD=""
-PG_DEV_DATABASE=""
+PG_LOCAL_HOST=""
+PG_LOCAL_USER=""
+PG_LOCAL_PASSWORD=""
+PG_LOCAL_DATABASE=""
