--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@vercel/postgres": "^0.9.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.4.0",
-    "next": "14.2.5",
+    "next": "^14.2.13",
     "next-auth": "^5.0.0-beta.20",
     "pg": "^8.10.0",
     "react": "^18",
